tests/analyze/visibility-opaque-rejected/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Variant `mk` does not exist in enum of type `token`.
> 5 | def t = lib.token.mk "abc"
                        ^^

error: Type mismatch: expected `string -> 'a`, but found `?`.
> 5 | def t = lib.token.mk "abc"
              ^^^^^^^^^^^^^^^^^^
